Update descriptions and add keywords for Preonus framework articles to enhance clarity and SEO

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 id: intro
 title: Introduction to Preonus Framework
 description: Learn about Preonus Framework - a Build-Time Dependency Injection framework for ultra-fast Java applications
+keywords: [preonus, java framework, dependency injection, build-time di, aot, zero reflection, introduction]
 ---
 
 import { StartupComparison, BenchmarkChart } from '@site/src/components/interactive';
